@startuml
class MenuItem {
    + Title : string <<get>> <<set>>
    + Enabled : bool <<get>>
    + MenuItem(title:string, action:GameAction, width:int, bgcolor:Color)
    + Enable() : void
    + Disable() : void
}
class Menu {
    + Width : int <<get>>
    + SelectedIndex : int <<get>>
    + Enabled : bool <<get>>
    + Menu(width:int, bgColor:Color, color:Color)
    + AddItem(title:string, action:GameAction, bgcolor:Color, enabled:bool) : void
    + SelectDown() : void
    + SelectUp() : void
    + SelectFirstEnabled() : void
    + Enable() : void
    + Disable() : void
}
class "List`1"<T> {
}
MenuItem --> "Action" GameAction
MenuItem --> "Sprite" Sprite
Menu --> "BgColor" Color
Menu --> "Color" Color
Menu --> "MenuItems<MenuItem>" "List`1"
@enduml
